fixed some bugs and layout problems

--- a/app.css
+++ b/app.css
@@ -119,7 +119,7 @@ h1 {
 .box {
     height:290px;
     width:290px;
-    margin:1em auto;
+    margin:3em auto;
     background:#3d406d;
     border-radius:50%;
     position:relative;
@@ -458,7 +458,7 @@ h1 {
     }
 
     .box {
-        margin:2em auto;
+        margin:5em auto;
     }
 
     #settings_btn {
